                               Release History
===========================================================================

3.6.1 to 3.7: (April xx, 2012)

  * Updated the CompuMate keyboard handler to recognize more keys on an
    actual keyboard, instead of having to remember the weird combinations
    used on the original CompuMate keyboard (although those original keys
    will continue to work).

  * Added emulation for MindLink controller using the mouse; the 'Bionic
    Breakthrough' and 'Telepathy' ROMs now work.

  * Updated FA2 bankswitch scheme (Star Castle) to emulate load/save
    high score functionality to the Harmony cart flash RAM.

  * Several updates to the internal properties database:
      - 'Juno First' ROMs now use an AtariVox/SaveKey when possible
      - 'Astroblast' ROMs now use the paddles by default

  * Updated included PNG library to latest stable version.

-Have fun!


3.6 to 3.6.1: (March 30, 2012)

  * Extended FA2 bankswitch scheme to handle 28K ROMs (in addition to
    the previously supported 24K ROMs).


3.5.5 to 3.6: (March 16, 2012)

  * Added support for 2600-daptor II device, including native support
    for 7800 controllers, BoosterGrip and Keypad controllers.  Special
    thanks go to Tom Hafner for a complimentary test sample of this
    device, and also for donating a BoosterGrip controller.

  * Added ability to dynamically swap the port order of Stelladaptor/
    2600-daptor devices with the 'Control-1' key combo (useful if you
    have only one 2600-daptor and want to use it as a left port
    normally, but as a right port for Star Raiders, etc).

  * Added CompuMate bankswitching/controller support to the emulation
    core; the Spectravideo CompuMate ROMs (NTSC and PAL) now work.
    Frequently used keys on the CompuMate are directly mapped to your
    keyboard (ie, Func-Space for backspace is mapped to Backspace, etc).
    Loading/saving from the cassette player is not yet supported, and